fix: Isolated text align button active class names #589 (#590)
* adding resize functionality

* add resize icon

* UI minor style improvements

* Image resizing functionality implemented

* fix sometimes image cropped on resizing bug.

* fix image resizing undo and redo functions problems

* Beautified resize label in history list

* Added image resizing icon on history

* changes documentation commentline resize component and command files. Removed unnecesary css style: .{prefix}-submenu-align-mr-0

* Created resize API for graphics.

* simplifying resize methods

* simplifying resize methods

* deleted unnecessary comments

* simplified selectionCleared method

* fix test: 'switches drawing modes'

* fix dimension update after scaling bug

* lockState is turned on recalculated max width and heigth values

* remove unnecessary lockState property and set method

* added resize component test case

* Resize command tests added.

* import Promise from tui image editor utils for old browser support

* Simplified ui limit set functions.

* Simple language change on resize tests: should setted original -> should set original

* Resize added to Features title on README.md

* Add prefix text align block's active class: tie-text-align-

--- a/apps/image-editor/src/css/buttons.styl
+++ b/apps/image-editor/src/css/buttons.styl
@@ -75,9 +75,9 @@
     .{prefix}-button.active svg > use.active
         display: block;
 .tie-text-align-button
-    &.left .{prefix}-button.left svg > use.active,
-    &.center .{prefix}-button.center svg > use.active,
-    &.right .{prefix}-button.right svg > use.active
+    &.tie-text-align-left .{prefix}-button.left svg > use.active,
+    &.tie-text-align-center .{prefix}-button.center svg > use.active,
+    &.tie-text-align-right .{prefix}-button.right svg > use.active
         display: block;
 .tie-mask-image-file,
 .tie-icon-image-file
